--- a/ecomm_app/templates/ecomm/base.html
+++ b/ecomm_app/templates/ecomm/base.html
@@ -26,21 +26,25 @@
           </a>
           {% endif %}
           {% if user.is_authenticated %}
-          <a href="{% url 'profile' %}" class="w3-bar-item w3-hide-small"><i class="fa fa-user mr-3"></i> Profile</a>
-          <a href="{% url 'logout' %}" class="w3-bar-item w3-hide-small"><i class="fa fa-sign-in-alt mr-3"></i>Logout</a>
+          {% if user.is_staff %}
+          <a href="#" class="w3-bar-item w3-hide-small"><i class="fa fa-user mr-3"></i> Dashboard</a>
+          {% elif user.is_customer %}
+          <a href="{% url 'accounts:customer-profile' user.id %}" class="w3-bar-item w3-hide-small"><i class="fa fa-user mr-3"></i> Profile</a>
+          {% endif %}
+          <a href="{% url 'accounts:logout' %}" class="w3-bar-item w3-hide-small"><i class="fa fa-sign-in-alt mr-3"></i>Logout</a>
           {% else %}
-          <a href="{% url 'login' %}" class="w3-bar-item w3-hide-small">Login</a>
-          <a href="{% url 'register' %}" class="w3-bar-item w3-hide-small">Sign up</a>
+          <a href="{% url 'accounts:login' %}" class="w3-bar-item w3-hide-small">Login</a>
+          <a href="{% url 'accounts:register' %}" class="w3-bar-item w3-hide-small">Sign up</a>
           {% endif %}
           <a href="javascript:void(0)" class="w3-bar-item w3-hide-large w3-hide-medium" onclick="myFunction()">&#9776;</a>
       </div>
       <div id="demo" class="w3-bar-block w3-hide w3-right w3-hide-large w3-hide-medium">
         {% if user.is_authenticated %}
-        <a href="{% url 'profile' %}" class="w3-bar-item "><i class="fa fa-user mr-3"></i> Profile</a>
-        <a href="{% url 'logout' %}" class="w3-bar-item "><i class="fa fa-sign-in-alt mr-3"></i>Logout</a>
+        <a href="#" class="w3-bar-item "><i class="fa fa-user mr-3"></i> Profile</a>
+        <a href="{% url 'accounts:logout' %}" class="w3-bar-item "><i class="fa fa-sign-in-alt mr-3"></i>Logout</a>
         {% else %}
-        <a href="{% url 'login' %}" class="w3-bar-item ">Login</a>
-        <a href="{% url 'register' %}" class="w3-bar-item ">Sign up</a>
+        <a href="{% url 'accounts:login' %}" class="w3-bar-item ">Login</a>
+        <a href="{% url 'accounts:register' %}" class="w3-bar-item ">Sign up</a>
         {% endif %}
       </div>
     </nav>
