--- a/accounts/templates/accounts/logout.html
+++ b/accounts/templates/accounts/logout.html
@@ -10,7 +10,7 @@
                   <h2>You have Logged Out!</h2>
                   <hr>
                   <h6 class="text-muted">Click the link below to</h6>
-                  <a href="{% url 'login' %}" class="post-author">Sign in again</a>
+                  <a href="{% url 'accounts:login' %}" class="post-author">Sign in again</a>
               </div>
             </div>
           </div>
