--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -6,12 +6,12 @@
             <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="form-group">
-                  <legend class="mb-4">{{ user.username|title }} Profile</legend>
-                  <img class="rounded-circle" src="{{ user.profile.image.url }}" alt="{{ user.username }}">
+                  <legend class="mb-4">{{ profile.user.first_name }} Profile</legend>
+                  <img class="rounded-circle" src="{{ profile.profile_pic.url }}" alt="{{ profile.user.first_name }}">
                 </div>
                 <fieldset class="forms">
-                  {{ u_form| crispy }}
-                  {{ p_form| crispy }}
+                  {{ user_form| crispy}}
+                  {{ profile_form| crispy }}
                 </fieldset>
                 <div class="form-group mt-2">
                   <button class="btn btn-info btn-block" type="submit">Update</button>
