--- a/ecomm_app/templates/ecomm/checkout.html
+++ b/ecomm_app/templates/ecomm/checkout.html
@@ -8,7 +8,7 @@
     <div class="col-md-12">
         <div class="w3-card mt-5 mb-5">
           <h1>CHECKOUT</h1>
-          <form>
+          <form method="post">
             {% csrf_token %}
             <!-- {{ form| crispy }} -->
             <div class="row">
