--- a/ecomm_app/templates/ecomm/staff/addItem.html
+++ b/ecomm_app/templates/ecomm/staff/addItem.html
@@ -3,16 +3,16 @@
 {% block title %} Add Item {% endblock %}
 {% block content %}
 
-<div class="addItem_container mt-5  pt-3">
+<div class="add_container mt-5  pt-3">
   <div class="row">
-    <div class="col-md-12">
-        <div class="w3-card mt-5 mb-5">
-          <h1>Add Item</h1>
+    <div class="col-md-12 column col-12">
+        <div class="w3-card item-card mt-5 mb-5">
+          <h1 class="mt-5">Add Item</h1>
           <form method="post" enctype = "multipart/form-data">
             {% csrf_token %}
             {{ form| crispy }}
             <hr>
-            <button class="btn block" type="submit" name="button">Add</button>
+            <button class="btn btn-block" type="submit" name="button">Add</button>
           </form>
         </div>
     </div>
