--- a/ecomm_app/templates/ecomm/staff/addsubcategory.html
+++ b/ecomm_app/templates/ecomm/staff/addsubcategory.html
@@ -3,16 +3,16 @@
 {% block title %} Add Sub-Category {% endblock %}
 {% block content %}
 
-<div class="addItem_container mt-5  pt-3">
+<div class="add_container mt-5  pt-3">
   <div class="row">
-    <div class="col-md-12">
-        <div class="w3-card mt-5 mb-5">
+    <div class="col-md-12 column col-12">
+        <div class="w3-card mt-5 usub-card mb-5">
           <h1>Add Sub-Category</h1>
-          <form method="post">
+          <form method="post" enctype = "multipart/form-data">
             {% csrf_token %}
             {{ form| crispy }}
             <hr>
-            <button class="btn block" type="submit" name="button">Add</button>
+            <button class="btn btn-block" type="submit" name="button">Add</button>
           </form>
         </div>
     </div>
