--- a/ecomm_app/templates/ecomm/staff/listCategory.html
+++ b/ecomm_app/templates/ecomm/staff/listCategory.html
@@ -6,18 +6,20 @@
 <div class="container">
   <div class="row">
     <div class="contents">
-      <div class="col-md-12">
+      <div class="col-md-12 ">
         <div class="heading">
           <h3>ALL CATEGORIES</h3>
         </div>
         {% if categories %}
-          <form class="form-inline mt-5 ml-2 block" method="GET">
-            <input type="text" name = "q" placeholder="Search Category">
-            <div class="searchBar">
-              <button type="submit" class="btn btn-primary btnColor mb-2">Search</button>
-            </div>
-        </form>
-        <table class="table table-sm table-bordered table-hover">
+          <div class="search-form mt-5">
+            <form class="form-inline  ml-2 block" method="GET">
+              <input type="text" name = "q" placeholder="Search Category">
+              <div class="searchBar ml-4">
+                <button type="submit" class="btn btn-block ">Search</button>
+              </div>
+            </form>
+          </div>
+          <table class="table listTable table-sm table-striped table-bordered table-hover">
             <tr>
                 <!-- <thead class="thead-dark"> -->
                 <thead>
