--- a/ecomm_app/templates/ecomm/staff/listItem.html
+++ b/ecomm_app/templates/ecomm/staff/listItem.html
@@ -11,28 +11,34 @@
           <h3>ALL ITEMS</h3>
         </div>
         {% if items %}
-          <form class="form-inline mt-5 ml-2 block" method="GET">
-            <div class="searchBar">
-              <input type="text" name = "q" placeholder="Search Item">
-              <button type="submit" class="btn btn-primary btnColor mb-2">Search</button>
+        <div class="search-form mt-5">
+          <form class="form-inline  ml-2 block" method="GET">
+            <input type="text" name = "q" placeholder="Search Category">
+            <div class="searchBar ml-4">
+              <button type="submit" class="btn btn-block ">Search</button>
             </div>
-        </form>
-        <table class="table table-sm table-bordered table-hover">
+          </form>
+        </div>
+        <table class="table table-sm table-bordered table-striped table-hover">
             <tr>
                 <!-- <thead class="thead-dark"> -->
                 <thead>
                   <th>#</th>
                   <th>Item Title</th>
                   <th>Price</th>
-                  <th>Discount Price</th>
+                  {% for item in items %}
+                  {% if item.discount_price %}
+                  <th class="w3-hide-small">Discount Price</th>
+                  {% endif %}
+                  {% endfor %}
                   <th>Category</th>
-                  <th>Label</th>
-                  <th>Tag</th>
+                  <th class="w3-hide-small">Label</th>
+                  <th class="w3-hide-small">Tag</th>
                   <th>Action</th>
                 </thead>
             </tr>
             <tbody>
-                {% for item in items %}
+              {% for item in items %}
                 <tr>
                   <td>{{forloop.counter}}</td>
                   <td>{{item.title}}</td>
@@ -40,11 +46,11 @@
                   {% if item.discount_price %}
                   <td>{{item.discount_price}}</td>
                   {% else %}
-                  <td>0</td>
+                  <td class="w3-hide-small">0</td>
                   {% endif %}
                   <td>{{item.category.name}}</td>
-                  <td>{{item.get_label_display}}</td>
-                  <td>{{item.get_tag_display}}</td>
+                  <td class="w3-hide-small">{{item.get_label_display}}</td>
+                  <td class="w3-hide-small">{{item.get_tag_display}}</td>
                   <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
                       <a href="{% url 'ecomm_app:update_item' item.slug %}"><button type="button" class="btn btn-primary"><i class="fa fa-edit"></i></button></a>
